force-app/main/default/objects/LeadProducts__c/fields/Captured_Charges__c.field-meta.xml
<CustomField>
    <fullName>Captured_Charges__c</fullName>
    <label>Captured Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>