force-app/main/default/objects/LeadProducts__c/fields/Completed_Payouts__c.field-meta.xml
<CustomField>
    <fullName>Completed_Payouts__c</fullName>
    <label>Completed Payouts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>