force-app/main/default/objects/LeadProducts__c/fields/Is_Backend_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Backend_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Backend Created</label>
    <type>Checkbox</type>
</CustomField>