force-app/main/default/objects/LeadProducts__c/fields/Is_Discount_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Product__c</fullName>
    <formula>Product__r.Is_Discount_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Discount Product</label>
    <type>Checkbox</type>
</CustomField>