force-app/main/default/objects/LeadProducts__c/fields/Is_subscription__c.field-meta.xml
<CustomField>
    <fullName>Is_subscription__c</fullName>
    <formula>NOT(ISBLANK(  Plan_handle__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is subscription</label>
    <type>Checkbox</type>
</CustomField>