force-app/main/default/objects/LeadProducts__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Lead Products</relationshipLabel>
    <relationshipName>Lead_Products</relationshipName>
    <type>Lookup</type>
</CustomField>