force-app/main/default/objects/LeadProducts__c/fields/Open_Payouts__c.field-meta.xml
<CustomField>
    <fullName>Open_Payouts__c</fullName>
    <label>Open Payouts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>