force-app/main/default/objects/LeadProducts__c/fields/Open_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Open_Transfers__c</fullName>
    <label>Open Transfers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>