force-app/main/default/objects/LeadProducts__c/fields/Partner_Provision_Value__c.field-meta.xml
<CustomField>
    <fullName>Partner_Provision_Value__c</fullName>
    <label>Partner Provision Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>