force-app/main/default/objects/LeadProducts__c/fields/Partner_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Value__c</fullName>
    <label>Partner Sales Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>