force-app/main/default/objects/LeadProducts__c/fields/Provision_Base__c.field-meta.xml
<CustomField>
    <fullName>Provision_Base__c</fullName>
    <label>Provision Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>